...
        android:textColor="@color/white"
        android:textSize="55sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="20dp"
        android:textSize="22sp"
        android:textColor="@color/dark_royal_purple"
...
