<resources>
    <string name="app_name">user_manager_v1</string>
    <string name="welcome_msg">Welcome User</string>

    <!-- For Sign Up Page / Activity -->
    <string name="go_to_sign_in">Already Have and account? Sign In</string>
    <!-- For Sign In Page / Activity -->
    <string name="go_to_sign_up">Don\'t Have and account? Sign Up</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Apply today, get hired tomorrow.</string>
    <string name="nav_header_subtitle">-By HAKA</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_exam">Skill Assessment</string>
    <string name="menu_slideshow">Profile</string>
    <string name="menu_companies">Companies</string>
    <string name="menu_settings">Settings</string>

</resources>